@@ -1,1 +1,8 @@
 # OOP_VN_History
+
+# How to run in eclipse:
+
+Click to src/application/Main.java and click run main with run configurations and chose java application . After that , you click Arguments and add this --module-path "path" --add-modules javafx.controls,javafx.fxml to VM arguments . And path is your location of javafx lib .
+
+# This app can help you search info character , king , dynastry , fesitval , relic details in Viet Nam and show full display of data fields when you click it . It also has an additional button at the bottom to display some information related to the search data field
+ 
